force-app/main/default/objects/Course__c/Course__c.object-meta.xml
<CustomObject>
    <description>This object contains course records relating to various record types within the contact object</description>
    <label>Course</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Course Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>