force-app/main/default/objects/Course__c/fields/Course_Completed__c.field-meta.xml
<CustomField>
    <fullName>Course_Completed__c</fullName>
    <label>Course Completed</label>
    <type>Date</type>
</CustomField>