force-app/main/default/objects/Course__c/fields/Course_Title2__c.field-meta.xml
<CustomField>
    <fullName>Course_Title2__c</fullName>
    <label>Course Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1-Instruction and Teaching Skills v.1                  </fullName>
            </value>
            <value>
                <fullName>P2-Ethics, Empathy, Integrity v.1</fullName>
            </value>
            <value>
                <fullName>P3-Communication, Listening, Interpersonal Skills v.1</fullName>
            </value>
            <value>
                <fullName>P4 -Managing the Client Training Experience v.1</fullName>
            </value>
            <value>
                <fullName>P5-Confidentiality and Professionalism v.1</fullName>
            </value>
            <value>
                <fullName>D1-Animal Learning Theory v.1</fullName>
            </value>
            <value>
                <fullName>D2-Fundamentals of Dog Development and Physiology v.1</fullName>
            </value>
            <value>
                <fullName>D3-Puppy Socialization v.1</fullName>
            </value>
            <value>
                <fullName>D4-Body Language v.1</fullName>
            </value>
            <value>
                <fullName>D5-Behavior Fundamentals v.1</fullName>
            </value>
            <value>
                <fullName>D6-Health v.1</fullName>
            </value>
            <value>
                <fullName>D7-Training Equipment v.1</fullName>
            </value>
            <value>
                <fullName>D8-Dog Training Approaches and Session Mgmt v.1</fullName>
            </value>
            <value>
                <fullName>D9-Fitness and Conditioning v.1</fullName>
            </value>
            <value>
                <fullName>I1-Atlas Overview v.1</fullName>
            </value>
            <value>
                <fullName>I2-History and Types of Service Dogs</fullName>
            </value>
            <value>
                <fullName>S8-Prep  Atlas PAT and client expectations prep course v.1</fullName>
            </value>
            <value>
                <fullName>S8-Atlas PAT course v.1</fullName>
            </value>
            <value>
                <fullName>S1-Choice of a dog appropriate for Service Work v.1</fullName>
            </value>
            <value>
                <fullName>S2-ADA and relevant laws v.1</fullName>
            </value>
            <value>
                <fullName>S3A-Who are our clients? V.1</fullName>
            </value>
            <value>
                <fullName>S3B-Working with People with Disabilities v.1</fullName>
            </value>
            <value>
                <fullName>S4A-Disability Skills Training: Foundation</fullName>
            </value>
            <value>
                <fullName>S4B-Disability Skills Training: Mobility</fullName>
            </value>
            <value>
                <fullName>S4C-Disability Skills Training: Medical</fullName>
            </value>
            <value>
                <fullName>S4D-Disability Skills Training: Psychiatric</fullName>
            </value>
            <value>
                <fullName>S5-Disability Skills Training: Hearing</fullName>
            </value>
            <value>
                <fullName>S6-Disability Skills Training: Scent</fullName>
            </value>
            <value>
                <fullName>S7-Developing your Service Dog Training Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>