force-app/main/default/objects/Course__c/fields/Term_SIS__c.field-meta.xml
<CustomField>
    <fullName>Term_SIS__c</fullName>
    <label>Term SIS</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>